test/compile_errors/err_unreachable_after_never_call.w
//! expect-error: unreachable code

fn stop -> Never:
    loop:
        let _ = 1

fn main:
    stop()
    print("never")
